Revert "Fix SonarQube identified issues"
This reverts commit 8b6a1bdaa27951937eccd580f02371205ff534b1.