@@ -13,6 +13,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
@@ -46,7 +47,7 @@ public class PaymentOutboxRepositoryImpl implements PaymentOutboxRepository {
         "could not be found for saga type " + sagaType))
       .stream()
       .map(paymentOutboxDataAccessMapper::paymentOutboxEntityToOrderPaymentOutboxMessage)
-      .toList());
+      .collect(Collectors.toList()));
   }
 
   @Override
