@@ -13,6 +13,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class ApprovalOutboxRepositoryImpl implements ApprovalOutboxRepository {
@@ -44,7 +45,7 @@ public class ApprovalOutboxRepositoryImpl implements ApprovalOutboxRepository {
         "could be found for saga type " + sagaType))
       .stream()
       .map(approvalOutboxDataAccessMapper::approvalOutboxEntityToOrderApprovalOutboxMessage)
-      .toList());
+      .collect(Collectors.toList()));
   }
 
   @Override
