@@ -18,6 +18,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderDataMapper {
@@ -27,7 +28,7 @@ public class OrderDataMapper {
       .restaurantId(new RestaurantId(createOrderCommand.getRestaurantId()))
       .products(createOrderCommand.getItems().stream().map(orderItem ->
           new Product(new ProductId(orderItem.getProductId())))
-        .toList())
+        .collect(Collectors.toList()))
       .build();
   }
 
@@ -87,7 +88,7 @@ public class OrderDataMapper {
         OrderApprovalEventProduct.builder()
           .id(orderItem.getProduct().getId().getValue().toString())
           .quantity(orderItem.getQuantity())
-          .build()).toList())
+          .build()).collect(Collectors.toList()))
       .price(orderPaidEvent.getOrder().getPrice().getAmount())
       .createdAt(orderPaidEvent.getCreatedAt())
       .build();
@@ -109,7 +110,7 @@ public class OrderDataMapper {
           .price(new Money(orderItem.getPrice()))
           .quantity(orderItem.getQuantity())
           .subTotal(new Money(orderItem.getSubTotal()))
-          .build()).toList();
+          .build()).collect(Collectors.toList());
   }
 
   private StreetAddress orderAddressToStreetAddress(OrderAddress orderAddress) {
