@@ -9,6 +9,7 @@ import com.food.ordering.system.order.service.domain.outbox.model.payment.OrderP
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderMessagingDataMapper {
@@ -74,7 +75,7 @@ public class OrderMessagingDataMapper {
         com.food.ordering.system.kafka.order.avro.model.Product.newBuilder()
           .setId(orderApprovalEventProduct.getId())
           .setQuantity(orderApprovalEventProduct.getQuantity())
-          .build()).toList())
+          .build()).collect(Collectors.toList()))
       .setPrice(orderApprovalEventPayload.getPrice())
       .setCreatedAt(orderApprovalEventPayload.getCreatedAt().toInstant())
       .build();
