@@ -11,6 +11,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderOutboxRepositoryImpl implements OrderOutboxRepository {
@@ -40,7 +41,7 @@ public class OrderOutboxRepositoryImpl implements OrderOutboxRepository {
         "cannot be found for saga type " + sagaType))
       .stream()
       .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage)
-      .toList());
+      .collect(Collectors.toList()));
   }
 
   @Override
