@@ -11,6 +11,7 @@ import com.food.ordering.system.restaurant.service.domain.outbox.model.OrderEven
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantMessagingDataMapper {
@@ -31,7 +32,7 @@ public class RestaurantMessagingDataMapper {
             .productId(new ProductId(UUID.fromString(avroModel.getId())))
             .quantity(avroModel.getQuantity())
             .build())
-        .toList())
+        .collect(Collectors.toList()))
       .price(restaurantApprovalRequestAvroModel.getPrice())
       .createdAt(restaurantApprovalRequestAvroModel.getCreatedAt())
       .build();
